fix: table's header overflow

--- a/WSRS-SWAFO/wwwroot/css/recordStyle.css
+++ b/WSRS-SWAFO/wwwroot/css/recordStyle.css
@@ -23,6 +23,7 @@ table {
     border-collapse: separate; 
     border-spacing: 0; 
     font-family: var(--light);
+    overflow: hidden;
 }
 
     table th, 
